// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`migration-graph scenario gallery > verbatim ANSI snapshots > diamond > diamond:alt 1`] = `
"[92m○[39m     dm_merg
[92m╰[39m[92m─[39m[92m╮[39m
[2m│[22m[2m↑[22m[92m│[39m   [2m20260606T1713_merge_alice[22m  [2mdm_alic[22m [2m→[22m [2mdm_merg[22m
[2m│[22m [92m│[39m[92m↑[39m  [92m20260606T1714_merge_bob[39m     dm_bob → dm_merg  ↑ will run
[2m○[22m [92m│[39m   [2mdm_alic[22m
[2m│[22m[2m↑[22m[92m│[39m   [2m20260606T1711_alice[22m        [2mdm_root[22m [2m→[22m [2mdm_alic[22m
[2m│[22m [92m○[39m   dm_bob
[2m│[22m [92m│[39m[92m↑[39m  [92m20260606T1712_bob[39m          dm_root → dm_bob  ↑ will run
[92m╭[39m[92m─[39m[92m╯[39m
[92m○[39m     dm_root
[92m│[39m[92m↑[39m    [92m20260606T1710_init[39m               ∅ → dm_root  ↑ will run
[92m○[39m     ∅"
`;

exports[`migration-graph scenario gallery > verbatim ANSI snapshots > diamond > diamond:rotating 1`] = `
"[37m○[39m     dm_merg
[37m│[39m[36m─[39m[36m╮[39m
[37m│[39m[37m↑[39m[36m│[39m   [37m20260606T1713_merge_alice[39m  dm_alic → dm_merg
[37m│[39m [36m│[39m[36m↑[39m  [36m20260606T1714_merge_bob[39m     dm_bob → dm_merg
[37m○[39m [36m│[39m   dm_alic
[37m│[39m[37m↑[39m[36m│[39m   [37m20260606T1711_alice[39m        dm_root → dm_alic
[37m│[39m [36m○[39m   dm_bob
[37m│[39m [36m│[39m[36m↑[39m  [36m20260606T1712_bob[39m          dm_root → dm_bob
[37m│[39m[36m─[39m[36m╯[39m
[37m○[39m     dm_root
[37m│[39m[37m↑[39m    [37m20260606T1710_init[39m               ∅ → dm_root
[37m○[39m     ∅"
`;

exports[`migration-graph scenario gallery > verbatim ANSI snapshots > diamond > diamond:trunk 1`] = `
"[92m○[39m     dm_merg
[92m│[39m[2m─[22m[2m╮[22m
[92m│[39m[92m↑[39m[2m│[22m   [92m20260606T1713_merge_alice[39m  dm_alic → dm_merg  ↑ will run
[92m│[39m [2m│[22m[2m↑[22m  [2m20260606T1714_merge_bob[22m     [2mdm_bob[22m [2m→[22m [2mdm_merg[22m
[92m○[39m [2m│[22m   dm_alic
[92m│[39m[92m↑[39m[2m│[22m   [92m20260606T1711_alice[39m        dm_root → dm_alic  ↑ will run
[92m│[39m [2m○[22m   [2mdm_bob[22m
[92m│[39m [2m│[22m[2m↑[22m  [2m20260606T1712_bob[22m          [2mdm_root[22m [2m→[22m [2mdm_bob[22m
[92m│[39m[2m─[22m[2m╯[22m
[92m○[39m     dm_root
[92m│[39m[92m↑[39m    [92m20260606T1710_init[39m               ∅ → dm_root  ↑ will run
[92m○[39m     ∅"
`;

exports[`migration-graph scenario gallery > verbatim ANSI snapshots > fan-3 > fan-3:altA 1`] = `
"[2m○[22m       [2mfn_trun[22m
[2m│[22m[2m↑[22m      [2m20260606T1716_trunk[22m  [2mfn_root[22m [2m→[22m [2mfn_trun[22m
[2m│[22m [92m○[39m     fn_altA
[2m│[22m [92m│[39m[92m↑[39m    [92m20260606T1717_altA[39m   fn_root → fn_altA  ↑ will run
[2m│[22m [92m│[39m [2m○[22m   [2mfn_altB[22m
[2m│[22m [92m│[39m [2m│[22m[2m↑[22m  [2m20260606T1718_altB[22m   [2mfn_root[22m [2m→[22m [2mfn_altB[22m
[92m╭[39m[92m─[39m[92m╯[39m[2m─[22m[2m╯[22m
[92m○[39m       fn_root
[92m│[39m[92m↑[39m      [92m20260606T1715_init[39m         ∅ → fn_root  ↑ will run
[92m○[39m       ∅"
`;

exports[`migration-graph scenario gallery > verbatim ANSI snapshots > fan-3 > fan-3:altB 1`] = `
"[2m○[22m       [2mfn_trun[22m
[2m│[22m[2m↑[22m      [2m20260606T1716_trunk[22m  [2mfn_root[22m [2m→[22m [2mfn_trun[22m
[2m│[22m [2m○[22m     [2mfn_altA[22m
[2m│[22m [2m│[22m[2m↑[22m    [2m20260606T1717_altA[22m   [2mfn_root[22m [2m→[22m [2mfn_altA[22m
[2m│[22m [2m│[22m [92m○[39m   fn_altB
[2m│[22m [2m│[22m [92m│[39m[92m↑[39m  [92m20260606T1718_altB[39m   fn_root → fn_altB  ↑ will run
[92m╭[39m[92m─[39m[92m─[39m[92m─[39m[92m╯[39m
[92m○[39m       fn_root
[92m│[39m[92m↑[39m      [92m20260606T1715_init[39m         ∅ → fn_root  ↑ will run
[92m○[39m       ∅"
`;

exports[`migration-graph scenario gallery > verbatim ANSI snapshots > fan-3 > fan-3:rotating 1`] = `
"[37m○[39m       fn_trun
[37m│[39m[37m↑[39m      [37m20260606T1716_trunk[39m  fn_root → fn_trun
[37m│[39m [36m○[39m     fn_altA
[37m│[39m [36m│[39m[36m↑[39m    [36m20260606T1717_altA[39m   fn_root → fn_altA
[37m│[39m [36m│[39m [33m○[39m   fn_altB
[37m│[39m [36m│[39m [33m│[39m[33m↑[39m  [33m20260606T1718_altB[39m   fn_root → fn_altB
[37m│[39m[36m─[39m[36m╯[39m[33m─[39m[33m╯[39m
[37m○[39m       fn_root
[37m│[39m[37m↑[39m      [37m20260606T1715_init[39m         ∅ → fn_root
[37m○[39m       ∅"
`;

exports[`migration-graph scenario gallery > verbatim ANSI snapshots > fan-3 > fan-3:trunk 1`] = `
"[92m○[39m       fn_trun
[92m│[39m[92m↑[39m      [92m20260606T1716_trunk[39m  fn_root → fn_trun  ↑ will run
[92m│[39m [2m○[22m     [2mfn_altA[22m
[92m│[39m [2m│[22m[2m↑[22m    [2m20260606T1717_altA[22m   [2mfn_root[22m [2m→[22m [2mfn_altA[22m
[92m│[39m [2m│[22m [2m○[22m   [2mfn_altB[22m
[92m│[39m [2m│[22m [2m│[22m[2m↑[22m  [2m20260606T1718_altB[22m   [2mfn_root[22m [2m→[22m [2mfn_altB[22m
[92m│[39m[2m─[22m[2m╯[22m[2m─[22m[2m╯[22m
[92m○[39m       fn_root
[92m│[39m[92m↑[39m      [92m20260606T1715_init[39m         ∅ → fn_root  ↑ will run
[92m○[39m       ∅"
`;

exports[`migration-graph scenario gallery > verbatim ANSI snapshots > fork-2 > fork-2:alt 1`] = `
"[2m○[22m     [2mf2_trun[22m
[2m│[22m[2m↑[22m    [2m20260606T1704_trunk_feature[22m  [2mf2_root[22m [2m→[22m [2mf2_trun[22m
[2m│[22m [92m○[39m   f2_alt
[2m│[22m [92m│[39m[92m↑[39m  [92m20260606T1705_alt_feature[39m    f2_root → f2_alt  ↑ will run
[92m╭[39m[92m─[39m[92m╯[39m
[92m○[39m     f2_root
[92m│[39m[92m↑[39m    [92m20260606T1703_init[39m                 ∅ → f2_root  ↑ will run
[92m○[39m     ∅"
`;

exports[`migration-graph scenario gallery > verbatim ANSI snapshots > fork-2 > fork-2:rotating 1`] = `
"[37m○[39m     f2_trun
[37m│[39m[37m↑[39m    [37m20260606T1704_trunk_feature[39m  f2_root → f2_trun
[37m│[39m [36m○[39m   f2_alt
[37m│[39m [36m│[39m[36m↑[39m  [36m20260606T1705_alt_feature[39m    f2_root → f2_alt
[37m│[39m[36m─[39m[36m╯[39m
[37m○[39m     f2_root
[37m│[39m[37m↑[39m    [37m20260606T1703_init[39m                 ∅ → f2_root
[37m○[39m     ∅"
`;

exports[`migration-graph scenario gallery > verbatim ANSI snapshots > fork-2 > fork-2:trunk 1`] = `
"[92m○[39m     f2_trun
[92m│[39m[92m↑[39m    [92m20260606T1704_trunk_feature[39m  f2_root → f2_trun  ↑ will run
[92m│[39m [2m○[22m   [2mf2_alt[22m
[92m│[39m [2m│[22m[2m↑[22m  [2m20260606T1705_alt_feature[22m    [2mf2_root[22m [2m→[22m [2mf2_alt[22m
[92m│[39m[2m─[22m[2m╯[22m
[92m○[39m     f2_root
[92m│[39m[92m↑[39m    [92m20260606T1703_init[39m                 ∅ → f2_root  ↑ will run
[92m○[39m     ∅"
`;

exports[`migration-graph scenario gallery > verbatim ANSI snapshots > linear > linear:full 1`] = `
"[92m○[39m   lin_c
[92m│[39m[92m↑[39m  [92m20260606T1702_add_posts[39m    lin_b → lin_c  ↑ will run
[92m○[39m   lin_b
[92m│[39m[92m↑[39m  [92m20260606T1701_add_users[39m    lin_a → lin_b  ↑ will run
[92m○[39m   lin_a
[92m│[39m[92m↑[39m  [92m20260606T1700_init[39m             ∅ → lin_a  ↑ will run
[92m○[39m   ∅"
`;

exports[`migration-graph scenario gallery > verbatim ANSI snapshots > linear > linear:rotating 1`] = `
"[37m○[39m   lin_c
[37m│[39m[37m↑[39m  [37m20260606T1702_add_posts[39m    lin_b → lin_c
[37m○[39m   lin_b
[37m│[39m[37m↑[39m  [37m20260606T1701_add_users[39m    lin_a → lin_b
[37m○[39m   lin_a
[37m│[39m[37m↑[39m  [37m20260606T1700_init[39m             ∅ → lin_a
[37m○[39m   ∅"
`;

exports[`migration-graph scenario gallery > verbatim ANSI snapshots > merge-2 > merge-2:alt 1`] = `
"[92m○[39m     m2_merg
[92m╰[39m[92m─[39m[92m╮[39m
[2m│[22m[2m↑[22m[92m│[39m   [2m20260606T1708_merge_a[22m           [2mm2_a[22m [2m→[22m [2mm2_merg[22m
[2m│[22m [92m│[39m[92m↑[39m  [92m20260606T1709_merge_b[39m           m2_b → m2_merg  ↑ will run
[2m○[22m [92m│[39m   [2mm2_a[22m
[2m│[22m[2m↑[22m[92m│[39m   [2m20260606T1706_init_branch_a[22m        [2m∅[22m [2m→[22m [2mm2_a[22m
[2m│[22m [92m○[39m   m2_b
[2m│[22m [92m│[39m[92m↑[39m  [92m20260606T1707_init_branch_b[39m        ∅ → m2_b  ↑ will run
[92m╭[39m[92m─[39m[92m╯[39m
[92m○[39m     ∅"
`;

exports[`migration-graph scenario gallery > verbatim ANSI snapshots > merge-2 > merge-2:rotating 1`] = `
"[37m○[39m     m2_merg
[37m│[39m[36m─[39m[36m╮[39m
[37m│[39m[37m↑[39m[36m│[39m   [37m20260606T1708_merge_a[39m           m2_a → m2_merg
[37m│[39m [36m│[39m[36m↑[39m  [36m20260606T1709_merge_b[39m           m2_b → m2_merg
[37m○[39m [36m│[39m   m2_a
[37m│[39m[37m↑[39m[36m│[39m   [37m20260606T1706_init_branch_a[39m        ∅ → m2_a
[37m│[39m [36m○[39m   m2_b
[37m│[39m [36m│[39m[36m↑[39m  [36m20260606T1707_init_branch_b[39m        ∅ → m2_b
[37m│[39m[36m─[39m[36m╯[39m
[37m○[39m     ∅"
`;

exports[`migration-graph scenario gallery > verbatim ANSI snapshots > merge-2 > merge-2:trunk 1`] = `
"[92m○[39m     m2_merg
[92m│[39m[2m─[22m[2m╮[22m
[92m│[39m[92m↑[39m[2m│[22m   [92m20260606T1708_merge_a[39m           m2_a → m2_merg  ↑ will run
[92m│[39m [2m│[22m[2m↑[22m  [2m20260606T1709_merge_b[22m           [2mm2_b[22m [2m→[22m [2mm2_merg[22m
[92m○[39m [2m│[22m   m2_a
[92m│[39m[92m↑[39m[2m│[22m   [92m20260606T1706_init_branch_a[39m        ∅ → m2_a  ↑ will run
[92m│[39m [2m○[22m   [2mm2_b[22m
[92m│[39m [2m│[22m[2m↑[22m  [2m20260606T1707_init_branch_b[22m        [2m∅[22m [2m→[22m [2mm2_b[22m
[92m│[39m[2m─[22m[2m╯[22m
[92m○[39m     ∅"
`;

exports[`migration-graph scenario gallery > verbatim ANSI snapshots > rollback-adjacent > rollback-adjacent:forward 1`] = `
"[92m○[39m   ra_c
[92m│[39m[92m↑[39m  [92m20260606T1727_add_posts[39m          ra_b → ra_c  ↑ will run
[92m○[39m   ra_b
[92m│[39m[92m↑[39m  [92m20260606T1726_add_users[39m          ra_a → ra_b  ↑ will run
[92m│[39m[2m↓[22m  [2m20260606T1728_rollback_users[22m     [2mra_b[22m [2m→[22m [2mra_a[22m
[92m○[39m   ra_a
[92m│[39m[92m↑[39m  [92m20260606T1725_init[39m                  ∅ → ra_a  ↑ will run
[92m○[39m   ∅"
`;

exports[`migration-graph scenario gallery > verbatim ANSI snapshots > rollback-adjacent > rollback-adjacent:rotating 1`] = `
"[37m○[39m   ra_c
[37m│[39m[37m↑[39m  [37m20260606T1727_add_posts[39m          ra_b → ra_c
[37m○[39m   ra_b
[37m│[39m[37m↑[39m  [37m20260606T1726_add_users[39m          ra_a → ra_b
[37m│[39m[37m↓[39m  [37m20260606T1728_rollback_users[39m     ra_b → ra_a
[37m○[39m   ra_a
[37m│[39m[37m↑[39m  [37m20260606T1725_init[39m                  ∅ → ra_a
[37m○[39m   ∅"
`;

exports[`migration-graph scenario gallery > verbatim ANSI snapshots > rollback-adjacent > rollback-adjacent:through-rollback 1`] = `
"[2m○[22m   [2mra_c[22m
[2m│[22m[2m↑[22m  [2m20260606T1727_add_posts[22m          [2mra_b[22m [2m→[22m [2mra_c[22m
[92m○[39m   ra_b
[92m│[39m[2m↑[22m  [2m20260606T1726_add_users[22m          [2mra_a[22m [2m→[22m [2mra_b[22m
[92m│[39m[92m↓[39m  [92m20260606T1728_rollback_users[39m     ra_b → ra_a  ↑ will run
[92m○[39m   ra_a
[2m│[22m[2m↑[22m  [2m20260606T1725_init[22m                  [2m∅[22m [2m→[22m [2mra_a[22m
[2m○[22m   ∅"
`;

exports[`migration-graph scenario gallery > verbatim ANSI snapshots > rollback-arc > rollback-arc:rotating 1`] = `
"[37m○[39m[36m─[39m[36m╮[39m   rbarc_c
[37m│[39m [36m│[39m[36m↓[39m  [36m20260606T1732_rollback_to_a[39m  rbarc_c → rbarc_a
[37m│[39m[37m↑[39m[36m│[39m   [37m20260606T1731_add_posts[39m      rbarc_b → rbarc_c
[37m○[39m [36m│[39m   rbarc_b
[37m│[39m[37m↑[39m[36m│[39m   [37m20260606T1730_add_users[39m      rbarc_a → rbarc_b
[37m○[39m[36m◂[39m[36m╯[39m   rbarc_a
[37m│[39m[37m↑[39m    [37m20260606T1729_init[39m                 ∅ → rbarc_a
[37m○[39m     ∅"
`;

exports[`migration-graph scenario gallery > verbatim ANSI snapshots > rollback-arc > rollback-arc:through-arc 1`] = `
"[92m○[39m[92m─[39m[92m╮[39m   rbarc_c
[2m│[22m [92m│[39m[92m↓[39m  [92m20260606T1732_rollback_to_a[39m  rbarc_c → rbarc_a  ↑ will run
[2m│[22m[2m↑[22m[92m│[39m   [2m20260606T1731_add_posts[22m      [2mrbarc_b[22m [2m→[22m [2mrbarc_c[22m
[2m○[22m [92m│[39m   [2mrbarc_b[22m
[2m│[22m[2m↑[22m[92m│[39m   [2m20260606T1730_add_users[22m      [2mrbarc_a[22m [2m→[22m [2mrbarc_b[22m
[92m○[39m[92m◂[39m[92m╯[39m   rbarc_a
[2m│[22m[2m↑[22m    [2m20260606T1729_init[22m                 [2m∅[22m [2m→[22m [2mrbarc_a[22m
[2m○[22m     ∅"
`;

exports[`migration-graph scenario gallery > verbatim ANSI snapshots > rollback-arc > rollback-arc:trunk 1`] = `
"[92m○[39m[2m─[22m[2m╮[22m   rbarc_c
[92m│[39m [2m│[22m[2m↓[22m  [2m20260606T1732_rollback_to_a[22m  [2mrbarc_c[22m [2m→[22m [2mrbarc_a[22m
[92m│[39m[92m↑[39m[2m│[22m   [92m20260606T1731_add_posts[39m      rbarc_b → rbarc_c  ↑ will run
[92m○[39m [2m│[22m   rbarc_b
[92m│[39m[92m↑[39m[2m│[22m   [92m20260606T1730_add_users[39m      rbarc_a → rbarc_b  ↑ will run
[92m○[39m[2m◂[22m[2m╯[22m   rbarc_a
[92m│[39m[92m↑[39m    [92m20260606T1729_init[39m                 ∅ → rbarc_a  ↑ will run
[92m○[39m     ∅"
`;

exports[`migration-graph scenario gallery > verbatim ANSI snapshots > rollback-converge-2 > rollback-converge-2:arc-1 1`] = `
"[92m○[39m[92m─[39m[92m╮[39m   rcv2_d
[2m│[22m [92m│[39m[92m↓[39m  [92m20260606T1752_rollback_d_to_a[39m   rcv2_d → rcv2_a  ↑ will run
[2m│[22m[2m↑[22m[92m│[39m   [2m20260606T1751_step3[22m             [2mrcv2_c[22m [2m→[22m [2mrcv2_d[22m
[2m○[22m[2m─[22m[92m│[39m   [2mrcv2_c[22m
[2m│[22m [92m│[39m[2m↓[22m  [2m20260606T1753_rollback_c_to_a[22m   [2mrcv2_c[22m [2m→[22m [2mrcv2_a[22m
[2m│[22m[2m↑[22m[92m│[39m   [2m20260606T1750_step2[22m             [2mrcv2_b[22m [2m→[22m [2mrcv2_c[22m
[2m○[22m [92m│[39m   [2mrcv2_b[22m
[2m│[22m[2m↑[22m[92m│[39m   [2m20260606T1749_step1[22m             [2mrcv2_a[22m [2m→[22m [2mrcv2_b[22m
[92m○[39m[92m◂[39m[92m╯[39m   rcv2_a
[2m│[22m[2m↑[22m    [2m20260606T1748_init[22m                   [2m∅[22m [2m→[22m [2mrcv2_a[22m
[2m○[22m     ∅"
`;

exports[`migration-graph scenario gallery > verbatim ANSI snapshots > rollback-converge-2 > rollback-converge-2:arc-2 1`] = `
"[2m○[22m[2m─[22m[2m╮[22m   [2mrcv2_d[22m
[2m│[22m [2m│[22m[2m↓[22m  [2m20260606T1752_rollback_d_to_a[22m   [2mrcv2_d[22m [2m→[22m [2mrcv2_a[22m
[2m│[22m[2m↑[22m[2m│[22m   [2m20260606T1751_step3[22m             [2mrcv2_c[22m [2m→[22m [2mrcv2_d[22m
[92m○[39m[92m─[39m[92m╮[39m   rcv2_c
[2m│[22m [92m│[39m[92m↓[39m  [92m20260606T1753_rollback_c_to_a[39m   rcv2_c → rcv2_a  ↑ will run
[2m│[22m[2m↑[22m[92m│[39m   [2m20260606T1750_step2[22m             [2mrcv2_b[22m [2m→[22m [2mrcv2_c[22m
[2m○[22m [92m│[39m   [2mrcv2_b[22m
[2m│[22m[2m↑[22m[92m│[39m   [2m20260606T1749_step1[22m             [2mrcv2_a[22m [2m→[22m [2mrcv2_b[22m
[92m○[39m[92m◂[39m[92m╯[39m   rcv2_a
[2m│[22m[2m↑[22m    [2m20260606T1748_init[22m                   [2m∅[22m [2m→[22m [2mrcv2_a[22m
[2m○[22m     ∅"
`;

exports[`migration-graph scenario gallery > verbatim ANSI snapshots > rollback-converge-2 > rollback-converge-2:rotating 1`] = `
"[37m○[39m[36m─[39m[36m╮[39m   rcv2_d
[37m│[39m [36m│[39m[36m↓[39m  [36m20260606T1752_rollback_d_to_a[39m   rcv2_d → rcv2_a
[37m│[39m[37m↑[39m[36m│[39m   [37m20260606T1751_step3[39m             rcv2_c → rcv2_d
[37m○[39m[33m─[39m[33m╮[39m   rcv2_c
[37m│[39m [33m│[39m[33m↓[39m  [33m20260606T1753_rollback_c_to_a[39m   rcv2_c → rcv2_a
[37m│[39m[37m↑[39m[33m│[39m   [37m20260606T1750_step2[39m             rcv2_b → rcv2_c
[37m○[39m [33m│[39m   rcv2_b
[37m│[39m[37m↑[39m[33m│[39m   [37m20260606T1749_step1[39m             rcv2_a → rcv2_b
[37m○[39m[33m◂[39m[33m╯[39m   rcv2_a
[37m│[39m[37m↑[39m    [37m20260606T1748_init[39m                   ∅ → rcv2_a
[37m○[39m     ∅"
`;

exports[`migration-graph scenario gallery > verbatim ANSI snapshots > rollback-converge-3 > rollback-converge-3:arc-1 1`] = `
"[92m○[39m[92m─[39m[92m╮[39m   rcv3_e
[2m│[22m [92m│[39m[92m↓[39m  [92m20260606T1759_rollback_e_to_a[39m   rcv3_e → rcv3_a  ↑ will run
[2m│[22m[2m↑[22m[92m│[39m   [2m20260606T1758_step4[22m             [2mrcv3_d[22m [2m→[22m [2mrcv3_e[22m
[2m○[22m[2m─[22m[92m│[39m   [2mrcv3_d[22m
[2m│[22m [92m│[39m[2m↓[22m  [2m20260606T1760_rollback_d_to_a[22m   [2mrcv3_d[22m [2m→[22m [2mrcv3_a[22m
[2m│[22m[2m↑[22m[92m│[39m   [2m20260606T1757_step3[22m             [2mrcv3_c[22m [2m→[22m [2mrcv3_d[22m
[2m○[22m[2m─[22m[92m│[39m   [2mrcv3_c[22m
[2m│[22m [92m│[39m[2m↓[22m  [2m20260606T1761_rollback_c_to_a[22m   [2mrcv3_c[22m [2m→[22m [2mrcv3_a[22m
[2m│[22m[2m↑[22m[92m│[39m   [2m20260606T1756_step2[22m             [2mrcv3_b[22m [2m→[22m [2mrcv3_c[22m
[2m○[22m [92m│[39m   [2mrcv3_b[22m
[2m│[22m[2m↑[22m[92m│[39m   [2m20260606T1755_step1[22m             [2mrcv3_a[22m [2m→[22m [2mrcv3_b[22m
[92m○[39m[92m◂[39m[92m╯[39m   rcv3_a
[2m│[22m[2m↑[22m    [2m20260606T1754_init[22m                   [2m∅[22m [2m→[22m [2mrcv3_a[22m
[2m○[22m     ∅"
`;

exports[`migration-graph scenario gallery > verbatim ANSI snapshots > rollback-converge-3 > rollback-converge-3:rotating 1`] = `
"[37m○[39m[36m─[39m[36m╮[39m   rcv3_e
[37m│[39m [36m│[39m[36m↓[39m  [36m20260606T1759_rollback_e_to_a[39m   rcv3_e → rcv3_a
[37m│[39m[37m↑[39m[36m│[39m   [37m20260606T1758_step4[39m             rcv3_d → rcv3_e
[37m○[39m[33m─[39m[33m╮[39m   rcv3_d
[37m│[39m [33m│[39m[33m↓[39m  [33m20260606T1760_rollback_d_to_a[39m   rcv3_d → rcv3_a
[37m│[39m[37m↑[39m[33m│[39m   [37m20260606T1757_step3[39m             rcv3_c → rcv3_d
[37m○[39m[94m─[39m[94m╮[39m   rcv3_c
[37m│[39m [94m│[39m[94m↓[39m  [94m20260606T1761_rollback_c_to_a[39m   rcv3_c → rcv3_a
[37m│[39m[37m↑[39m[94m│[39m   [37m20260606T1756_step2[39m             rcv3_b → rcv3_c
[37m○[39m [94m│[39m   rcv3_b
[37m│[39m[37m↑[39m[94m│[39m   [37m20260606T1755_step1[39m             rcv3_a → rcv3_b
[37m○[39m[94m◂[39m[94m╯[39m   rcv3_a
[37m│[39m[37m↑[39m    [37m20260606T1754_init[39m                   ∅ → rcv3_a
[37m○[39m     ∅"
`;

exports[`migration-graph scenario gallery > verbatim ANSI snapshots > rollback-cross > rollback-cross:arc-1 1`] = `
"[92m○[39m[92m─[39m[92m╮[39m   rbc_d
[2m│[22m [92m│[39m[92m↓[39m  [92m20260606T1742_rollback_long[39m     rbc_d → rbc_a  ↑ will run
[2m│[22m[2m↑[22m[92m│[39m   [2m20260606T1741_step3[22m             [2mrbc_c[22m [2m→[22m [2mrbc_d[22m
[2m○[22m [92m│[39m   [2mrbc_c[22m
[2m│[22m[2m↑[22m[92m│[39m   [2m20260606T1740_step2[22m             [2mrbc_b[22m [2m→[22m [2mrbc_c[22m
[2m│[22m[2m↓[22m[92m│[39m   [2m20260606T1743_rollback_short[22m    [2mrbc_c[22m [2m→[22m [2mrbc_b[22m
[2m○[22m [92m│[39m   [2mrbc_b[22m
[2m│[22m[2m↑[22m[92m│[39m   [2m20260606T1739_step1[22m             [2mrbc_a[22m [2m→[22m [2mrbc_b[22m
[92m○[39m[92m◂[39m[92m╯[39m   rbc_a
[2m│[22m[2m↑[22m    [2m20260606T1738_init[22m                  [2m∅[22m [2m→[22m [2mrbc_a[22m
[2m○[22m     ∅"
`;

exports[`migration-graph scenario gallery > verbatim ANSI snapshots > rollback-cross > rollback-cross:arc-2 1`] = `
"[2m○[22m[2m─[22m[2m╮[22m   [2mrbc_d[22m
[2m│[22m [2m│[22m[2m↓[22m  [2m20260606T1742_rollback_long[22m     [2mrbc_d[22m [2m→[22m [2mrbc_a[22m
[2m│[22m[2m↑[22m[2m│[22m   [2m20260606T1741_step3[22m             [2mrbc_c[22m [2m→[22m [2mrbc_d[22m
[92m○[39m [2m│[22m   rbc_c
[92m│[39m[2m↑[22m[2m│[22m   [2m20260606T1740_step2[22m             [2mrbc_b[22m [2m→[22m [2mrbc_c[22m
[92m│[39m[92m↓[39m[2m│[22m   [92m20260606T1743_rollback_short[39m    rbc_c → rbc_b  ↑ will run
[92m○[39m [2m│[22m   rbc_b
[2m│[22m[2m↑[22m[2m│[22m   [2m20260606T1739_step1[22m             [2mrbc_a[22m [2m→[22m [2mrbc_b[22m
[2m○[22m[2m◂[22m[2m╯[22m   [2mrbc_a[22m
[2m│[22m[2m↑[22m    [2m20260606T1738_init[22m                  [2m∅[22m [2m→[22m [2mrbc_a[22m
[2m○[22m     ∅"
`;

exports[`migration-graph scenario gallery > verbatim ANSI snapshots > rollback-cross > rollback-cross:rotating 1`] = `
"[37m○[39m[36m─[39m[36m╮[39m   rbc_d
[37m│[39m [36m│[39m[36m↓[39m  [36m20260606T1742_rollback_long[39m     rbc_d → rbc_a
[37m│[39m[37m↑[39m[36m│[39m   [37m20260606T1741_step3[39m             rbc_c → rbc_d
[37m○[39m [36m│[39m   rbc_c
[37m│[39m[37m↑[39m[36m│[39m   [37m20260606T1740_step2[39m             rbc_b → rbc_c
[37m│[39m[37m↓[39m[36m│[39m   [37m20260606T1743_rollback_short[39m    rbc_c → rbc_b
[37m○[39m [36m│[39m   rbc_b
[37m│[39m[37m↑[39m[36m│[39m   [37m20260606T1739_step1[39m             rbc_a → rbc_b
[37m○[39m[36m◂[39m[36m╯[39m   rbc_a
[37m│[39m[37m↑[39m    [37m20260606T1738_init[39m                  ∅ → rbc_a
[37m○[39m     ∅"
`;

exports[`migration-graph scenario gallery > verbatim ANSI snapshots > rollback-merge > rollback-merge:rotating 1`] = `
"[37m○[39m[36m─[39m[36m╮[39m   rbm_c
[37m│[39m [36m│[39m[36m↓[39m  [36m20260606T1736_rollback_a[39m    rbm_c → rbm_a
[37m│[39m[37m↑[39m[36m│[39m   [37m20260606T1735_add_posts[39m     rbm_b → rbm_c
[37m│[39m[37m↓[39m[36m│[39m   [37m20260606T1737_rollback_b[39m    rbm_c → rbm_b
[37m○[39m [36m│[39m   rbm_b
[37m│[39m[37m↑[39m[36m│[39m   [37m20260606T1734_add_users[39m     rbm_a → rbm_b
[37m○[39m[36m◂[39m[36m╯[39m   rbm_a
[37m│[39m[37m↑[39m    [37m20260606T1733_init[39m              ∅ → rbm_a
[37m○[39m     ∅"
`;

exports[`migration-graph scenario gallery > verbatim ANSI snapshots > rollback-merge > rollback-merge:via-A 1`] = `
"[92m○[39m[92m─[39m[92m╮[39m   rbm_c
[2m│[22m [92m│[39m[92m↓[39m  [92m20260606T1736_rollback_a[39m    rbm_c → rbm_a  ↑ will run
[2m│[22m[2m↑[22m[92m│[39m   [2m20260606T1735_add_posts[22m     [2mrbm_b[22m [2m→[22m [2mrbm_c[22m
[2m│[22m[2m↓[22m[92m│[39m   [2m20260606T1737_rollback_b[22m    [2mrbm_c[22m [2m→[22m [2mrbm_b[22m
[2m○[22m [92m│[39m   [2mrbm_b[22m
[2m│[22m[2m↑[22m[92m│[39m   [2m20260606T1734_add_users[22m     [2mrbm_a[22m [2m→[22m [2mrbm_b[22m
[92m○[39m[92m◂[39m[92m╯[39m   rbm_a
[2m│[22m[2m↑[22m    [2m20260606T1733_init[22m              [2m∅[22m [2m→[22m [2mrbm_a[22m
[2m○[22m     ∅"
`;

exports[`migration-graph scenario gallery > verbatim ANSI snapshots > rollback-merge > rollback-merge:via-B 1`] = `
"[92m○[39m[2m─[22m[2m╮[22m   rbm_c
[92m│[39m [2m│[22m[2m↓[22m  [2m20260606T1736_rollback_a[22m    [2mrbm_c[22m [2m→[22m [2mrbm_a[22m
[92m│[39m[2m↑[22m[2m│[22m   [2m20260606T1735_add_posts[22m     [2mrbm_b[22m [2m→[22m [2mrbm_c[22m
[92m│[39m[92m↓[39m[2m│[22m   [92m20260606T1737_rollback_b[39m    rbm_c → rbm_b  ↑ will run
[92m○[39m [2m│[22m   rbm_b
[2m│[22m[2m↑[22m[2m│[22m   [2m20260606T1734_add_users[22m     [2mrbm_a[22m [2m→[22m [2mrbm_b[22m
[2m○[22m[2m◂[22m[2m╯[22m   [2mrbm_a[22m
[2m│[22m[2m↑[22m    [2m20260606T1733_init[22m              [2m∅[22m [2m→[22m [2mrbm_a[22m
[2m○[22m     ∅"
`;

exports[`migration-graph scenario gallery > verbatim ANSI snapshots > self-loop > self-loop:rotating 1`] = `
"[37m│[39m[37m⟲[39m  [37m20260606T1746_noop_invariant[39m    sl2_b → sl2_b
[37m○[39m   sl2_b
[37m│[39m[37m↑[39m  [37m20260606T1745_add_users[39m         sl2_a → sl2_b
[37m○[39m   sl2_a
[37m│[39m[37m↑[39m  [37m20260606T1744_init[39m                  ∅ → sl2_a
[37m○[39m   ∅"
`;

exports[`migration-graph scenario gallery > verbatim ANSI snapshots > self-loop > self-loop:through-loop 1`] = `
"[92m│[39m[92m⟲[39m  [92m20260606T1746_noop_invariant[39m    sl2_b → sl2_b  ↑ will run
[92m○[39m   sl2_b
[2m│[22m[2m↑[22m  [2m20260606T1745_add_users[22m         [2msl2_a[22m [2m→[22m [2msl2_b[22m
[2m○[22m   [2msl2_a[22m
[2m│[22m[2m↑[22m  [2m20260606T1744_init[22m                  [2m∅[22m [2m→[22m [2msl2_a[22m
[2m○[22m   ∅"
`;

exports[`migration-graph scenario gallery > verbatim ANSI snapshots > showcase > showcase:alt 1`] = `
"[2m│[22m[2m⟲[22m            [2m20260601T0729_reapply_noop[22m     [2mf660984[22m [2m→[22m [2mf660984[22m
[2m○[22m             [2mf660984[22m
[2m│[22m[2m─[22m[2m─[22m[2m─[22m[2m─[22m[2m─[22m[2m╮[22m
[2m│[22m[2m↑[22m    [2m│[22m       [2m20260601T0727_hotfix[22m           [2mbf158ef[22m [2m→[22m [2mf660984[22m
[2m│[22m     [2m│[22m[2m↑[22m      [2m20260601T0728_promote_bob[22m      [2m935a023[22m [2m→[22m [2mf660984[22m
[92m○[39m[2m─[22m[2m─[22m[2m─[22m[2m─[22m[2m─[22m[2m│[22m[2m─[22m[2m╮[22m     bf158ef
[92m│[39m     [2m│[22m [2m│[22m[2m↓[22m    [2m20260601T0727_rollback_users[22m   [2mbf158ef[22m [2m→[22m [2m419c099[22m
[92m│[39m[92m↑[39m    [2m│[22m [2m│[22m     [92m20260601T0726_add_locale[39m       3705eb1 → bf158ef  ↑ will run
[92m│[39m[2m↓[22m    [2m│[22m [2m│[22m     [2m20260601T0727_rollback_locale[22m  [2mbf158ef[22m [2m→[22m [2m3705eb1[22m
[92m○[39m     [2m│[22m [2m│[22m     3705eb1
[92m│[39m[92m↑[39m    [2m│[22m [2m│[22m     [92m20260601T0726_add_bio[39m          83a1ded → 3705eb1  ↑ will run
[92m○[39m     [2m│[22m [2m│[22m     83a1ded
[92m│[39m[2m─[22m[2m╮[22m[2m─[22m[2m╮[22m [2m│[22m [2m│[22m
[92m│[39m[92m↑[39m[2m│[22m [2m│[22m [2m│[22m [2m│[22m     [92m20260601T0726_merge_alice[39m      f5aa17d → 83a1ded  ↑ will run
[92m│[39m [2m│[22m[2m↑[22m[2m│[22m [2m│[22m [2m│[22m     [2m20260601T0726_fast_forward[22m     [2m3bfce91[22m [2m→[22m [2m83a1ded[22m
[92m│[39m [2m│[22m [2m│[22m[2m↑[22m[2m│[22m [2m│[22m     [2m20260601T0726_merge_bob[22m        [2m935a023[22m [2m→[22m [2m83a1ded[22m
[92m○[39m[2m─[22m[2m│[22m[2m─[22m[2m│[22m[2m─[22m[2m│[22m[2m─[22m[2m─[22m[2m─[22m[2m╮[22m   f5aa17d
[92m│[39m [2m│[22m [2m│[22m [2m│[22m [2m│[22m [2m│[22m[2m↓[22m  [2m20260601T0727_rollback_alice[22m   [2mf5aa17d[22m [2m→[22m [2m3bfce91[22m
[92m│[39m[92m↑[39m[2m│[22m [2m│[22m [2m│[22m [2m│[22m [2m│[22m   [92m20260601T0725_alice_phone[39m      419c099 → f5aa17d  ↑ will run
[92m│[39m [2m│[22m [2m│[22m[2m─[22m[2m╯[22m [2m│[22m [2m│[22m
[92m│[39m [2m│[22m [2m○[22m   [2m│[22m [2m│[22m   [2m935a023[22m
[92m│[39m [2m│[22m [2m│[22m[2m↑[22m  [2m│[22m [2m│[22m   [2m20260601T0725_bob_avatar[22m       [2m419c099[22m [2m→[22m [2m935a023[22m
[92m│[39m[2m─[22m[2m─[22m[2m─[22m[2m╯[22m   [2m│[22m [2m│[22m
[92m○[39m[2m◂[22m[2m│[22m[2m─[22m[2m─[22m[2m─[22m[2m─[22m[2m─[22m[2m╯[22m [2m│[22m   419c099
[92m│[39m[92m↑[39m[2m│[22m       [2m│[22m   [92m20260601T0725_add_name[39m         3bfce91 → 419c099  ↑ will run
[92m│[39m[2m─[22m[2m╯[22m       [2m│[22m
[92m○[39m[2m◂[22m[2m─[22m[2m─[22m[2m─[22m[2m─[22m[2m─[22m[2m─[22m[2m─[22m[2m─[22m[2m╯[22m   3bfce91
[92m│[39m[92m↑[39m            [92m20260601T0719_init[39m                   ∅ → 3bfce91  ↑ will run
[92m○[39m             ∅"
`;

exports[`migration-graph scenario gallery > verbatim ANSI snapshots > showcase > showcase:rotating 1`] = `
"[37m│[39m[37m⟲[39m            [37m20260601T0729_reapply_noop[39m     f660984 → f660984
[37m○[39m             f660984
[37m│[39m[94m─[39m[94m─[39m[94m─[39m[94m─[39m[94m─[39m[94m╮[39m
[37m│[39m[37m↑[39m    [94m│[39m       [37m20260601T0727_hotfix[39m           bf158ef → f660984
[37m│[39m     [94m│[39m[94m↑[39m      [94m20260601T0728_promote_bob[39m      935a023 → f660984
[37m○[39m[33m─[39m[33m─[39m[33m─[39m[33m─[39m[33m─[39m[94m│[39m[33m─[39m[33m╮[39m     bf158ef
[37m│[39m     [94m│[39m [33m│[39m[33m↓[39m    [33m20260601T0727_rollback_users[39m   bf158ef → 419c099
[37m│[39m[37m↑[39m    [94m│[39m [33m│[39m     [37m20260601T0726_add_locale[39m       3705eb1 → bf158ef
[37m│[39m[37m↓[39m    [94m│[39m [33m│[39m     [37m20260601T0727_rollback_locale[39m  bf158ef → 3705eb1
[37m○[39m     [94m│[39m [33m│[39m     3705eb1
[37m│[39m[37m↑[39m    [94m│[39m [33m│[39m     [37m20260601T0726_add_bio[39m          83a1ded → 3705eb1
[37m○[39m     [94m│[39m [33m│[39m     83a1ded
[37m│[39m[36m─[39m[36m╮[39m[33m─[39m[33m╮[39m [94m│[39m [33m│[39m
[37m│[39m[37m↑[39m[36m│[39m [33m│[39m [94m│[39m [33m│[39m     [37m20260601T0726_merge_alice[39m      f5aa17d → 83a1ded
[37m│[39m [36m│[39m[36m↑[39m[33m│[39m [94m│[39m [33m│[39m     [36m20260601T0726_fast_forward[39m     3bfce91 → 83a1ded
[37m│[39m [36m│[39m [33m│[39m[33m↑[39m[94m│[39m [33m│[39m     [33m20260601T0726_merge_bob[39m        935a023 → 83a1ded
[37m○[39m[36m─[39m[36m│[39m[36m─[39m[33m│[39m[36m─[39m[94m│[39m[36m─[39m[36m─[39m[36m─[39m[36m╮[39m   f5aa17d
[37m│[39m [36m│[39m [33m│[39m [94m│[39m [33m│[39m [36m│[39m[36m↓[39m  [36m20260601T0727_rollback_alice[39m   f5aa17d → 3bfce91
[37m│[39m[37m↑[39m[36m│[39m [33m│[39m [94m│[39m [33m│[39m [36m│[39m   [37m20260601T0725_alice_phone[39m      419c099 → f5aa17d
[37m│[39m [36m│[39m [33m│[39m[94m─[39m[94m╯[39m [33m│[39m [36m│[39m
[37m│[39m [36m│[39m [33m○[39m   [33m│[39m [36m│[39m   935a023
[37m│[39m [36m│[39m [33m│[39m[33m↑[39m  [33m│[39m [36m│[39m   [33m20260601T0725_bob_avatar[39m       419c099 → 935a023
[37m│[39m[33m─[39m[33m─[39m[33m─[39m[33m╯[39m   [33m│[39m [36m│[39m
[37m○[39m[33m◂[39m[36m│[39m[33m─[39m[33m─[39m[33m─[39m[33m─[39m[33m─[39m[33m╯[39m [36m│[39m   419c099
[37m│[39m[37m↑[39m[36m│[39m       [36m│[39m   [37m20260601T0725_add_name[39m         3bfce91 → 419c099
[37m│[39m[36m─[39m[36m╯[39m       [36m│[39m
[37m○[39m[36m◂[39m[36m─[39m[36m─[39m[36m─[39m[36m─[39m[36m─[39m[36m─[39m[36m─[39m[36m─[39m[36m╯[39m   3bfce91
[37m│[39m[37m↑[39m            [37m20260601T0719_init[39m                   ∅ → 3bfce91
[37m○[39m             ∅"
`;

exports[`migration-graph scenario gallery > verbatim ANSI snapshots > showcase > showcase:trunk 1`] = `
"[2m│[22m[2m⟲[22m            [2m20260601T0729_reapply_noop[22m     [2mf660984[22m [2m→[22m [2mf660984[22m
[92m○[39m             f660984
[92m╰[39m[92m─[39m[92m─[39m[92m─[39m[92m─[39m[92m─[39m[92m╮[39m
[2m│[22m[2m↑[22m    [92m│[39m       [2m20260601T0727_hotfix[22m           [2mbf158ef[22m [2m→[22m [2mf660984[22m
[2m│[22m     [92m│[39m[92m↑[39m      [92m20260601T0728_promote_bob[39m      935a023 → f660984  ↑ will run
[2m○[22m[2m─[22m[2m─[22m[2m─[22m[2m─[22m[2m─[22m[92m│[39m[2m─[22m[2m╮[22m     [2mbf158ef[22m
[2m│[22m     [92m│[39m [2m│[22m[2m↓[22m    [2m20260601T0727_rollback_users[22m   [2mbf158ef[22m [2m→[22m [2m419c099[22m
[2m│[22m[2m↑[22m    [92m│[39m [2m│[22m     [2m20260601T0726_add_locale[22m       [2m3705eb1[22m [2m→[22m [2mbf158ef[22m
[2m│[22m[2m↓[22m    [92m│[39m [2m│[22m     [2m20260601T0727_rollback_locale[22m  [2mbf158ef[22m [2m→[22m [2m3705eb1[22m
[2m○[22m     [92m│[39m [2m│[22m     [2m3705eb1[22m
[2m│[22m[2m↑[22m    [92m│[39m [2m│[22m     [2m20260601T0726_add_bio[22m          [2m83a1ded[22m [2m→[22m [2m3705eb1[22m
[2m○[22m     [92m│[39m [2m│[22m     [2m83a1ded[22m
[2m│[22m[2m─[22m[2m╮[22m[2m─[22m[2m╮[22m [92m│[39m [2m│[22m
[2m│[22m[2m↑[22m[2m│[22m [2m│[22m [92m│[39m [2m│[22m     [2m20260601T0726_merge_alice[22m      [2mf5aa17d[22m [2m→[22m [2m83a1ded[22m
[2m│[22m [2m│[22m[2m↑[22m[2m│[22m [92m│[39m [2m│[22m     [2m20260601T0726_fast_forward[22m     [2m3bfce91[22m [2m→[22m [2m83a1ded[22m
[2m│[22m [2m│[22m [2m│[22m[2m↑[22m[92m│[39m [2m│[22m     [2m20260601T0726_merge_bob[22m        [2m935a023[22m [2m→[22m [2m83a1ded[22m
[2m○[22m[2m─[22m[2m│[22m[2m─[22m[2m│[22m[2m─[22m[92m│[39m[2m─[22m[2m─[22m[2m─[22m[2m╮[22m   [2mf5aa17d[22m
[2m│[22m [2m│[22m [2m│[22m [92m│[39m [2m│[22m [2m│[22m[2m↓[22m  [2m20260601T0727_rollback_alice[22m   [2mf5aa17d[22m [2m→[22m [2m3bfce91[22m
[2m│[22m[2m↑[22m[2m│[22m [2m│[22m [92m│[39m [2m│[22m [2m│[22m   [2m20260601T0725_alice_phone[22m      [2m419c099[22m [2m→[22m [2mf5aa17d[22m
[2m│[22m [2m│[22m [92m╭[39m[92m─[39m[92m╯[39m [2m│[22m [2m│[22m
[2m│[22m [2m│[22m [92m○[39m   [2m│[22m [2m│[22m   935a023
[2m│[22m [2m│[22m [92m│[39m[92m↑[39m  [2m│[22m [2m│[22m   [92m20260601T0725_bob_avatar[39m       419c099 → 935a023  ↑ will run
[92m╭[39m[92m─[39m[92m─[39m[92m─[39m[92m╯[39m   [2m│[22m [2m│[22m
[92m○[39m[2m◂[22m[2m│[22m[2m─[22m[2m─[22m[2m─[22m[2m─[22m[2m─[22m[2m╯[22m [2m│[22m   419c099
[92m│[39m[92m↑[39m[2m│[22m       [2m│[22m   [92m20260601T0725_add_name[39m         3bfce91 → 419c099  ↑ will run
[92m│[39m[2m─[22m[2m╯[22m       [2m│[22m
[92m○[39m[2m◂[22m[2m─[22m[2m─[22m[2m─[22m[2m─[22m[2m─[22m[2m─[22m[2m─[22m[2m─[22m[2m╯[22m   3bfce91
[92m│[39m[92m↑[39m            [92m20260601T0719_init[39m                   ∅ → 3bfce91  ↑ will run
[92m○[39m             ∅"
`;

exports[`migration-graph scenario gallery > verbatim ANSI snapshots > wide-fan > wide-fan:alt 1`] = `
"[2m○[22m         [2mwf_tip[22m
[2m│[22m[2m↑[22m        [2m20260606T1724_tip_feature[22m    [2mwf_t0[22m [2m→[22m [2mwf_tip[22m
[2m○[22m         [2mwf_t0[22m
[2m│[22m[2m↑[22m        [2m20260606T1720_trunk[22m        [2mwf_root[22m [2m→[22m [2mwf_t0[22m
[2m│[22m [2m○[22m       [2mwf_t1[22m
[2m│[22m [2m│[22m[2m↑[22m      [2m20260606T1721_branch_1[22m     [2mwf_root[22m [2m→[22m [2mwf_t1[22m
[2m│[22m [2m│[22m [92m○[39m     wf_t2
[2m│[22m [2m│[22m [92m│[39m[92m↑[39m    [92m20260606T1722_branch_2[39m     wf_root → wf_t2  ↑ will run
[2m│[22m [2m│[22m [92m│[39m [2m○[22m   [2mwf_t3[22m
[2m│[22m [2m│[22m [92m│[39m [2m│[22m[2m↑[22m  [2m20260606T1723_branch_3[22m     [2mwf_root[22m [2m→[22m [2mwf_t3[22m
[92m╭[39m[92m─[39m[92m─[39m[92m─[39m[92m╯[39m[2m─[22m[2m╯[22m
[92m○[39m         wf_root
[92m│[39m[92m↑[39m        [92m20260606T1719_init[39m               ∅ → wf_root  ↑ will run
[92m○[39m         ∅"
`;

exports[`migration-graph scenario gallery > verbatim ANSI snapshots > wide-fan > wide-fan:rotating 1`] = `
"[37m○[39m         wf_tip
[37m│[39m[37m↑[39m        [37m20260606T1724_tip_feature[39m    wf_t0 → wf_tip
[37m○[39m         wf_t0
[37m│[39m[37m↑[39m        [37m20260606T1720_trunk[39m        wf_root → wf_t0
[37m│[39m [36m○[39m       wf_t1
[37m│[39m [36m│[39m[36m↑[39m      [36m20260606T1721_branch_1[39m     wf_root → wf_t1
[37m│[39m [36m│[39m [33m○[39m     wf_t2
[37m│[39m [36m│[39m [33m│[39m[33m↑[39m    [33m20260606T1722_branch_2[39m     wf_root → wf_t2
[37m│[39m [36m│[39m [33m│[39m [94m○[39m   wf_t3
[37m│[39m [36m│[39m [33m│[39m [94m│[39m[94m↑[39m  [94m20260606T1723_branch_3[39m     wf_root → wf_t3
[37m│[39m[36m─[39m[36m╯[39m[33m─[39m[33m╯[39m[94m─[39m[94m╯[39m
[37m○[39m         wf_root
[37m│[39m[37m↑[39m        [37m20260606T1719_init[39m               ∅ → wf_root
[37m○[39m         ∅"
`;

exports[`migration-graph scenario gallery > verbatim ANSI snapshots > wide-fan > wide-fan:trunk 1`] = `
"[92m○[39m         wf_tip
[92m│[39m[92m↑[39m        [92m20260606T1724_tip_feature[39m    wf_t0 → wf_tip  ↑ will run
[92m○[39m         wf_t0
[92m│[39m[92m↑[39m        [92m20260606T1720_trunk[39m        wf_root → wf_t0  ↑ will run
[92m│[39m [2m○[22m       [2mwf_t1[22m
[92m│[39m [2m│[22m[2m↑[22m      [2m20260606T1721_branch_1[22m     [2mwf_root[22m [2m→[22m [2mwf_t1[22m
[92m│[39m [2m│[22m [2m○[22m     [2mwf_t2[22m
[92m│[39m [2m│[22m [2m│[22m[2m↑[22m    [2m20260606T1722_branch_2[22m     [2mwf_root[22m [2m→[22m [2mwf_t2[22m
[92m│[39m [2m│[22m [2m│[22m [2m○[22m   [2mwf_t3[22m
[92m│[39m [2m│[22m [2m│[22m [2m│[22m[2m↑[22m  [2m20260606T1723_branch_3[22m     [2mwf_root[22m [2m→[22m [2mwf_t3[22m
[92m│[39m[2m─[22m[2m╯[22m[2m─[22m[2m╯[22m[2m─[22m[2m╯[22m
[92m○[39m         wf_root
[92m│[39m[92m↑[39m        [92m20260606T1719_init[39m               ∅ → wf_root  ↑ will run
[92m○[39m         ∅"
`;
